--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,17 @@
 @tailwind utilities;
 
 body {
+    background-color: black;
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+    background-color: black;
 }
 
 .font-link {
